--- a/webpack/package.json
+++ b/webpack/package.json
@@ -12,15 +12,13 @@
     "@types/react-dom": "^17.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.2",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "echo start",
+    "build": "echo build",
+    "test": "echo test"
   },
   "eslintConfig": {
     "extends": [
