--- a/webpack/package.json
+++ b/webpack/package.json
@@ -16,8 +16,8 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "echo start",
-    "build": "echo build",
+    "start": "webpack serve --open --mode=development",
+    "build": "webpack --mode=production",
     "test": "echo test"
   },
   "eslintConfig": {
@@ -39,7 +39,12 @@
     ]
   },
   "devDependencies": {
+    "css-loader": "^5.0.2",
+    "html-webpack-plugin": "^5.1.0",
+    "style-loader": "^2.0.0",
+    "ts-loader": "^8.0.17",
     "webpack": "^5.21.2",
-    "webpack-cli": "^4.5.0"
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "^3.11.2"
   }
 }
