Specify NODE_ENV at build time

--- a/esbuild/package.json
+++ b/esbuild/package.json
@@ -17,7 +17,7 @@
   },
   "scripts": {
     "start": "echo start",
-    "build": "node build.mjs",
+    "build": "NODE_ENV=production node build.mjs",
     "test": "echo test"
   },
   "eslintConfig": {
