--- a/vite/package.json
+++ b/vite/package.json
@@ -17,7 +17,7 @@
   },
   "scripts": {
     "start": "echo start",
-    "build": "echo build",
+    "build": "vite build",
     "test": "echo test"
   },
   "eslintConfig": {
@@ -37,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "vite": "^2.0.5"
   }
 }
