--- a/snowpack/package.json
+++ b/snowpack/package.json
@@ -17,7 +17,7 @@
   },
   "scripts": {
     "start": "snowpack dev",
-    "build": "echo build",
+    "build": "snowpack build",
     "test": "echo test"
   },
   "eslintConfig": {
